feat: profile-update coins
